✨ feat(Routes.php): menambahkan beberapa route baru untuk fitur baru ✨ feat(Area.php): menambahkan class Area untuk menangani fitur baru pengajuan tim UT dan actual UAT ✨ feat(Mgr.php): menambahkan class Mgr untuk menangani fitur baru assign verifikator ✨ feat(Regional.php): menambahkan class Regional untuk menangani fitur baru approval ✨ feat(actual-uat.php): menambahkan halaman baru actual-uat.php untuk fitur baru actual UAT Menambahkan beberapa route baru untuk fitur baru, yaitu pengajuan tim UT, actual UAT, approval, dan assign verifikator. Menambahkan class Area, Mgr, dan Regional untuk menangani fitur baru tersebut. Menambahkan halaman baru actual-uat.php untuk fitur baru actual UAT.
🎨 style(navbar.php): mengubah tampilan dropdown menu pada navbar
✨ feat(approval.php, assign-verificator.php): menambahkan fitur baru pada halaman approval dan assign-verificator
Mengubah tampilan dropdown menu pada navbar agar lebih mudah dibaca dan menambahkan fitur baru pada halaman approval dan assign-verificator. Pada halaman approval ditambahkan fitur upload dokumen dan pada halaman assign-verificator dihapus fitur comment catatan dan submit button.

🆕 feat(pengajuan-tim-ut.php): menambahkan halaman pengajuan tim UT
🎨 style(style.css): menambahkan style untuk halaman pengajuan tim UT
Menambahkan halaman pengajuan tim UT yang berisi form input dan upload dokumen. Menambahkan style untuk halaman pengajuan tim UT agar tampilan lebih baik dan rapi.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -28,3 +28,14 @@
 .card {
     background-color: #D9D9D9;
 }
+
+.h-full {
+    min-height: 720px;
+}
+
+.doc {
+    /* stay on bottom of div */
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+}
